--- a/src/OPCONSAT/SConstruct
+++ b/src/OPCONSAT/SConstruct
@@ -17,47 +17,58 @@ here = os.getcwd()
 ienv = InstallEnvironment()
 
 if env['FORTRAN'] == 'gfortran':
-    env = Environment(F90FLAGS = '-O2 -fbacktrace -g -Wall -Wextra -Wno-maybe-uninitialized -fdiagnostics-color=auto -J'+here,)
+    env = Environment(F90FLAGS = '-O2 -fbacktrace -g -Wall -Wextra -Wno-maybe-uninitialized -fdiagnostics-color=auto -J'+here,
+                      FORTRANFLAGS = env['FORTRANFLAGS'] )
     # -pedantic chokes on declaration of double complex in the horrific padio and elsewhere
     # several "Unused dummy argument" warnings remain: padio, iomod, and atomicpotio
 elif env['FORTRAN'] == 'ifort':
-    env = Environment(F90FLAGS = '-O2 -warn -stand f08 -diag-disable 7601 -traceback -module '+here,)
+    env = Environment(F90FLAGS = '-O2 -warn -stand f08 -diag-disable 7601 -traceback -module '+here,
+                      FORTRANFLAGS = env['FORTRANFLAGS'] )
 
 lib_src = [
     'eps.f90',
     'getelement.f90',
-    'oca_atomicpotio.f90',
+
     'oca_atoms_inp.f90',
-    'oca_compton_inp.f90',
-    'oca_constants.f90',
-    'oca_controls.f90',
-    'oca_dimsmod.f90',
-    'oca_eels_inp.f90',
-    'oca_errorfile.f90',
-    'oca_errormod.f90',
-    'oca_ff2x_inp.f90',
-    'oca_fms_inp.f90',
-    'oca_genfmt_inp.f90',
     'oca_geometry_inp.f90',
     'oca_global_inp.f90',
+    'oca_opcons_inp.f90',
+    'oca_potential_inp.f90',
+
+    'oca_atomicpotio.f90',
+    'oca_constants.f90',
+    'oca_dimsmod.f90',
+    'oca_errorfile.f90',
+    'oca_errormod.f90',
     'oca_iofiles.f90',
     'oca_iomod.f90',
     'oca_kinds.f90',
-    'oca_kklist.f90',
-    'oca_ldos_inp.f90',
     'oca_mtdp.f90',
-    'oca_opcons_inp.f90',
     'oca_padio.f90',
     'oca_par.f90',
-    'oca_paths_inp.f90',
-    'oca_potential_inp.f90',
-    'oca_screen_inp.f90',
-    'oca_sfconv_inp.f90',
-    'oca_strfacs.f90',
-    'oca_struct.f90',
-    'oca_xsph_inp.f90',
-    'oca_reciprocal_inp.f90',
 ]
+
+## The following were extracted from opconsat_tot.f90 and not used by opconsat or eps2exc
+## each of these is a re-implementation in f90 (for some reason) of
+## the f77 routines for reading feff's old-style intermediate files
+    #'oca_compton_inp.f90',
+    #'oca_eels_inp.f90',
+    #'oca_ff2x_inp.f90',
+    #'oca_fms_inp.f90',
+    #'oca_genfmt_inp.f90',
+    #'oca_ldos_inp.f90',
+    #'oca_paths_inp.f90',
+    #'oca_reciprocal_inp.f90',
+    #'oca_screen_inp.f90',
+    #'oca_sfconv_inp.f90',
+    #'oca_xsph_inp.f90',
+
+## also not used here (extracted from opconsat_tot.f90
+    #'oca_controls.f90',
+    #'oca_kklist.f90',
+    #'oca_strfacs.f90',
+    #'oca_struct.f90',
+    
 
 
 #deps = ('COMMON/wlog', 'COMMON/str', 'COMMON/pertab', 'COMMON/getxk', 'COMMON/rdxsph',
@@ -80,3 +91,7 @@ libs = ['libfeffopconsat' + env['LIBSUFFIX'],
 
 env.Program('opconsat', bin_src+libs)
 env.Install(ienv['i_bin'], 'opconsat'+env['PROGSUFFIX'])
+
+
+#env.Object('eps2exc'+env['OBJSUFFIX'], source='eps2exc.f', FORTRANFLAGS = env['FORTRANFLAGS'])
+env.Program('eps2exc', ['eps2exc.f', join('..', 'MATH',   'libfeffmath.a'),])
