readme for opconsat

--- a/src/OPCONSAT/SConstruct
+++ b/src/OPCONSAT/SConstruct
@@ -93,15 +93,19 @@ libs = ['libfeffopconsat' + env['LIBSUFFIX'],
 
 env.SharedLibrary('libfeffloss', ['libfeffloss.f','e2emisc.f','eps.f90'])
 
-json = [ join('..', 'JSON',   'json_read_libpotph' + env['SHOBJSUFFIX']),
-         join('..', 'JSON',   'bailout'            + env['SHOBJSUFFIX'])]
-env.Program('loss', ['loss.f', 'libfeffloss.a'] +
-            json +
-            [join('..', 'POT', 'inipotph.f'), join('..', 'json-fortran', 'libjsonfortran.a')] +
-            libs)
+# json = [ join('..', 'JSON',   'json_read_libpotph' + env['SHOBJSUFFIX']),
+#          join('..', 'JSON',   'bailout'            + env['SHOBJSUFFIX'])]
+# env.Program('loss', ['loss.f', 'libfeffloss.a'] +
+#             json +
+#             [join('..', 'POT', 'inipotph.f'), join('..', 'json-fortran', 'libjsonfortran.a')] +
+#             libs)
 
 env.Program('opconsat', ['e2emisc.f']+bin_src+libs)
-env.Install(ienv['i_bin'], 'opconsat'+env['PROGSUFFIX'])
 
-#e2e_src = ['e2emisc.f', 'rdloss.f', '../COMMON/rdcmt.f']
-#env.Program('eps2exc', ['eps2exc.f', e2e_src, join('..', 'MATH',   'libfeffmath.a'),])
+e2e_src = ['e2emisc.f', 'rdloss.f']
+env.Program('eps2exc', ['eps2exc.f', e2e_src, join('..', 'MATH',   'libfeffmath.a'), join('..', 'COMMON',   'libfeffcom.a'),])
+
+env.Install(ienv['i_bin'], 'opconsat'+env['PROGSUFFIX'])
+env.Install(ienv['i_bin'], 'eps2exc'+env['PROGSUFFIX'])
+env.Install(ienv['i_lib'], 'libfeffloss'+env['SHLIBSUFFIX'])
+
