--- a/src/json-fortran/SConstruct
+++ b/src/json-fortran/SConstruct
@@ -7,7 +7,8 @@
 #  deals gracefully with robodoc not being installed on the system.
 #
 
-import os
+import sys, os
+sys.path.append('..')
 from os.path import join, realpath
 from SCons.Environment import Environment
 from FeffBuild import CompilationEnvironment, InstallEnvironment, FindOtherObjects
