--- a/src/DEBYE/Makefile
+++ b/src/DEBYE/Makefile
@@ -1,12 +1,12 @@
 
 
-FORTRAN = gfortran
-CFLAGS  = -c -O3 -ffree-line-length-none -g -Wall -fPIC
-FJSON   = -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
-AR      = ar
-ARFLAGS = rc
-RANLIB  = ranlib
-RM      = rm
+FORTRAN ?= gfortran
+CFLAGS  ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FJSON   ?= -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
+AR      ?= ar
+ARFLAGS ?= rvc
+RANLIB  ?= ranlib
+RM      ?= rm
 
 objects = sigcl.o  sigm3.o  sigms.o  sigrem.o  sigte3.o
 
@@ -15,6 +15,8 @@ deps = ../COMMON/wlog.o ../COMMON/str.o ../COMMON/itoken.o	\
 ../COMMON/pertab.o ../COMMON/chopen.o ../MATH/dist.o		\
 ../PAR/sequential.o
 
+
+all:	libfeffdw.a
 
 libfeffdw.a:	$(objects) $(deps)
 	$(AR) $(ARFLAGS) libfeffdw.a $(objects) $(deps)
@@ -36,8 +38,6 @@ sigrem.o:	sigrem.f ../HEADERS/parallel.h
 %.o:	%.f
 	$(FORTRAN) $(CFLAGS) $(FJSON) -o $@ $<
 
-
-all:	libfeffdw.a
 
 clean:
 	$(RM) *.a *.o
