--- a/src/JSON/Makefile
+++ b/src/JSON/Makefile
@@ -1,14 +1,16 @@
 
-FORTRAN = gfortran
-CFLAGS  = -c -O3 -ffree-line-length-none -g -Wall -fPIC
-FJSON   = -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
-AR      = ar
-ARFLAGS = rc
-RANLIB  = ranlib
-RM      = rm
+FORTRAN ?= gfortran
+CFLAGS  ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FJSON   ?= -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
+AR      ?= ar
+ARFLAGS ?= rvc
+RANLIB  ?= ranlib
+RM      ?= rm
 
 objects = bailout.o read_geom.o read_atoms.o read_global.o read_pot.o	\
 read_fpf0.o json_xsect.o read_xsect.o json_nnnn.o
+
+all:	libfeffcom.a
 
 libfeffjson.a:	$(objects)
 	$(AR) $(ARFLAGS) libfeffjson.a $(objects)
@@ -29,8 +31,6 @@ read_xsect.o:	read_xsect.f  ../HEADERS/dim.h ../HEADERS/const.h
 %.o:	%.f
 	$(FORTRAN) $(CFLAGS) $(FJSON) -o $@ $<
 
-
-all:	libfeffcom.a
 
 clean:
 	$(RM) *.a *.o
