--- a/src/PAR/Makefile
+++ b/src/PAR/Makefile
@@ -1,14 +1,16 @@
 
-FORTRAN = gfortran
-CFLAGS  = -c -O3 -ffree-line-length-none -g -Wall -fPIC
-FJSON   = -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
-AR      = ar
-ARFLAGS = rc
-RANLIB  = ranlib
-RM      = rm
+FORTRAN ?= gfortran
+CFLAGS  ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FJSON   ?= -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
+AR      ?= ar
+ARFLAGS ?= rvc
+RANLIB  ?= ranlib
+RM      ?= rm
 
 objects = sequential.o
 #objects = parallel.o
+
+all:	libfeffpar.a
 
 libfeffpar.a:	$(objects)
 	$(AR) $(ARFLAGS) libfeffpar.a $(objects)
@@ -24,8 +26,6 @@ sequential.o:	sequential.f ../HEADERS/parallel.h
 #	$(FORTRAN) $(CFLAGS) -o $@ $<
 
 
-
-all:	libfeffpar.a
 
 clean:
 	$(RM) *.a *.o
