--- a/src/MATH/Makefile
+++ b/src/MATH/Makefile
@@ -1,17 +1,19 @@
 
 
-FORTRAN = gfortran
-CFLAGS  = -c -O3 -ffree-line-length-none -g -Wall -fPIC
-FJSON   = -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
-AR      = ar
-ARFLAGS = rc
-RANLIB  = ranlib
-RM      = rm
+FORTRAN ?= gfortran
+CFLAGS  ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FJSON   ?= -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
+AR      ?= ar
+ARFLAGS ?= rvc
+RANLIB  ?= ranlib
+RM      ?= rm
 
 objects = bcoef.o besjn.o conv.o csomm.o cwig3j.o determ.o exjlnl.o	\
 phamp.o quartc.o sdist.o somm2.o terp.o trap.o besjh.o bjnser.o		\
 cpl0.o csomm2.o czeros.o dist.o lu.o polint.o rotwig.o somm.o strap.o	\
 terpc.o
+
+all:	libfeffmath.a
 
 libfeffmath.a:	$(objects)
 	$(AR) $(ARFLAGS) libfeffmath.a $(objects)
@@ -26,8 +28,6 @@ phamp.o:	phamp.f ../HEADERS/dim.h ../HEADERS/const.h
 %.o:	%.f
 	$(FORTRAN) $(CFLAGS) -o $@ $<
 
-
-all:	libfeffmath.a
 
 clean:
 	$(RM) *.a *.o
