--- a/src/json-fortran/Makefile
+++ b/src/json-fortran/Makefile
@@ -1,13 +1,14 @@
 
 
-FORTRAN  = gfortran
-F90      = -std=f2008
-F90FLAGS = -c -O2 -fbacktrace -g -Wall -Wextra -Wno-maybe-uninitialized -pedantic
-FJSON    = -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
-AR       = ar
-ARFLAGS  = rc
-RANLIB   = ranlib
-RM       = rm
+FORTRAN  ?= gfortran
+F90      ?= -std=f2008
+F90FLAGS ?= -c -O2 -fbacktrace -g -Wall -Wextra -Wno-maybe-uninitialized -pedantic
+FJSON    ?= -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
+AR       ?= ar
+ARFLAGS  ?= rvc
+RANLIB   ?= ranlib
+RM       ?= rm
+COPY     ?= cp -v
 
 all:	json_module.mod json_module.o libjsonfortran.a
 
@@ -21,4 +22,8 @@ libjsonfortran.a:
 clean:
 	$(RM) *.a *.o *.mod
 
-.PHONEY:	clean all
+install:
+	$(COPY) libjsonfortran.a $(PREFIX)/lib
+
+
+.PHONEY:	clean install all
